Issue #3211395 by Gauravmahlawat, andy-blum, aaron.ferris, Sakthivel M, kiran.kadam911, mherchel, tushar_sachdeva, xjm: Comment form save button has incorrect background color and contrast ratio violation on hover
(cherry picked from commit 8c2a1247d8cbc56fae4aa2872a72179fb01068ab)

--- a/core/themes/olivero/css/components/button.css
+++ b/core/themes/olivero/css/components/button.css
@@ -54,8 +54,10 @@
 .button:hover,
   .button:focus {
     text-decoration: none;
-    color: #2494db;
-    border-color: #2494db;
+    color: #0f6292;
+    border: solid 2px #0f6292;
+    background: none;
+    font-weight: 700;
   }
 
 .button:focus {
